--- a/studentmentalhealthvis.html
+++ b/studentmentalhealthvis.html
@@ -71,24 +71,30 @@
 
             <p>This notebook was originally coded in Observable and uses Javascript and Markdown syntax to generate interactive visualizations.</p>
 
-            <ul>
-                <li><em>TOOLS USED</em></li>
-                <li>Observable</li>
-                <li>Javascript</li>
-                <li>Markdown</li>
-                <li>Statistics Canada</li>
-                <li>BC Government Open Data Catalogue</li>
-            </ul>
+            
 
         </div>
 
         <div class="box">
-            <iframe frameborder="0"
-  src="https://observablehq.com/embed/4ed7a9d6593a890c@latest?cell=*"></iframe>
+          <ul>
+            <li><em>TOOLS USED</em></li>
+            <li>Observable</li>
+            <li>Javascript</li>
+            <li>Markdown</li>
+            <li>Statistics Canada</li>
+            <li>BC Government Open Data Catalogue</li>
+        </ul>
 
         </div>
 
         
+    </div>
+
+    <div class="container">
+      <div class="box">
+        <iframe style="background-color:white;" frameborder="0"
+        src="https://observablehq.com/embed/4ed7a9d6593a890c@latest?cell=*"></iframe>
+      </div>
     </div>
   </body>
 
