--- a/vorum.html
+++ b/vorum.html
@@ -1,121 +1,152 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>DLEE</title>
+  <title>DLEE</title>
 
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/font.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/font.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-    <link rel="icon"
-          type="image/png"
-          href="">
-
-    <script> 
-      /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
-        function navMenu() {
-            var x = document.getElementById("myNav");
-  
-            if (x.className === "nav") {
-              x.className += " responsive";
-            } else {
-              x.className = "nav";
-            }
-          }
-      </script>
-  
-      <script>
-        function changeIcon(x) {
-          if (x.className == "fa fa-bars") {
-            x.className = "fa fa-times";
-          } else {
-            x.className = "fa fa-bars";
-          }
-        }
-      </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-  </head>
+  <link rel="icon" type="image/png" href="">
+
+  <script>
+    /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+    function navMenu() {
+      var x = document.getElementById("myNav");
+
+      if (x.className === "nav") {
+        x.className += " responsive";
+      } else {
+        x.className = "nav";
+      }
+    }
+  </script>
+
+  <script>
+    function changeIcon(x) {
+      if (x.className == "fa fa-bars") {
+        x.className = "fa fa-times";
+      } else {
+        x.className = "fa fa-bars";
+      }
+    }
+  </script>
+
+
+</head>
 
 
 
-  <body>
+<body>
 
-    <nav class="nav" id="myNav">
-      <a href="index.html">home</a>
-      <a href="projects.html" class="active">projects</a>
-      <a href="photography.html">photography</a>
-      <a href="aboutme.html">about</a>
-      <a href="javascript:void(0);" class="icon" onclick="navMenu()">
-        <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
-    </nav>
-    
-    <div class="container">
+  <nav class="nav" id="myNav">
+    <a href="index.html">home</a>
+    <a href="projects.html" class="active">projects</a>
+    <a href="photography.html">photography</a>
+    <a href="aboutme.html">about</a>
+    <a href="javascript:void(0);" class="icon" onclick="navMenu()">
+      <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
+  </nav>
 
-        <div class="box">
+  <div class="container">
 
-            <h3>Vorum Re-brand (Co-op)</h3>
+    <div class="box">
 
-            <p>
-                <em>role:</em> Graphic Designer <br>
-                <em>timeframe:</em> September 2021 - May 2022
-            </p>
+      <h3>Vorum Re-brand (Co-op)</h3>
 
-            <p>
-                This was a co-op position where I was to help rebrand the company's image as it transitioned from a family company to a more corporate entity. Throughout this position I have created logos, slide templates, colour palettes, marketing materials, and a complete branding guide. I was also in charge of event photography and product photography for this position; because photos may include products not yet released, I will not be including them on my website.
-            </p>
+      <p>
+        <em>role:</em> Graphic Designer <br>
+        <em>timeframe:</em> September 2021 - May 2022
+      </p>
 
-            <ul>
-                <li><em>TOOLS USED</em></li>
-                <li>Adobe Creative Suite</li>
-                <li>Sharepoint</li>
-                <li>Figma</li>
-                <li>Canon EOS 1000D</li>
-            </ul>
+      <p>
+        This was a co-op position where I was to help rebrand the company's image as it transitioned from a family
+        company to a more corporate entity. Throughout this position I have created logos, slide templates, colour
+        palettes, marketing materials, and a complete branding guide. I was also in charge of event photography and
+        product photography for this position; because photos may include products not yet released, I will not be
+        including them on my website.
+      </p>
 
-        </div>
 
-        <div class="box">
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A10176%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2829%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2321%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2054%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2551%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2330%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2726%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2558%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
-        </div>
-
-        
     </div>
-  </body>
+
+    <div class="box">
+
+      <ul>
+        <li><em>TOOLS USED</em></li>
+        <li>Adobe Creative Suite</li>
+        <li>Sharepoint</li>
+        <li>Figma</li>
+        <li>Canon EOS 1000D</li>
+      </ul>
 
 
 
+    </div>
 
 
+  </div>
 
+  <div class="container">
+    <div class="box">
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://embed.figma.com/proto/GOgHpip5aHfrQWFihbUFcO/Vorum-O%26P-Materials?page-id=1%3A2&node-id=1-1392&p=f&viewport=718%2C471%2C0.12&scaling=min-zoom&content-scaling=fixed&embed-host=share" allowfullscreen></iframe>
 
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://embed.figma.com/proto/GOgHpip5aHfrQWFihbUFcO/Vorum-O%26P-Materials?page-id=1%3A10176&node-id=1-10177&p=f&viewport=718%2C471%2C0.05&scaling=contain&content-scaling=fixed&embed-host=share" allowfullscreen></iframe>
+    </div>
 
+    <div class="box">
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2829%26t%3DwwGt0UCqDEyQeEc2-1"
+        allowfullscreen></iframe>
 
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2321%26t%3DwwGt0UCqDEyQeEc2-1"
+        allowfullscreen></iframe>
 
+    </div>
 
+  </div>
 
+  <div class="container">
+    <div class="box">
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2054%26t%3DwwGt0UCqDEyQeEc2-1"
+        allowfullscreen></iframe>
+
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2551%26t%3DwwGt0UCqDEyQeEc2-1"
+        allowfullscreen></iframe>
+
+    </div>
+
+    <div class="box">
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2330%26t%3DwwGt0UCqDEyQeEc2-1"
+        allowfullscreen></iframe>
+
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2726%26t%3DwwGt0UCqDEyQeEc2-1"
+        allowfullscreen></iframe>
+
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="box">
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2558%26t%3DwwGt0UCqDEyQeEc2-1"
+        allowfullscreen></iframe>
+
+    </div>
+  </div>
+</body>
 
 </html>
