added contrasts feature

--- a/IATSU.html
+++ b/IATSU.html
@@ -56,16 +56,31 @@
       <a href="javascript:void(0);" class="icon" onclick="navMenu()">
         <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
     </nav>
+
+    <div class="container">
+      <div class="box">
+        <h3>Interactive Arts and Technology Student Union 2010-2020 (IATSU)</h3>
+      </div>
+    </div>
     
     <div class="container">
 
         <div class="box">
-            <h3>Interactive Arts and Technology Student Union 2010-2020 (IATSU)</h3>
+            
+
+          <h2>
+            role
+          </h2>
 
             <p>
-                <em>role:</em> Director of Communication Design
+                Director of Communication Design
             </p>
-            <p><em>timeframe:</em> May 2019 - May 2020</p>
+
+            <h2>
+              timeframe
+            </h2>
+
+            <p>May 2019 - May 2020</p>
 
             <p>
                 As Director of Communication Design, I was to design all social media graphics for our student union. This includes our term's branding, event promotion, and student help material.
@@ -75,8 +90,12 @@
         </div>
 
         <div class="box">
+
+          <h2>
+            tools used
+          </h2>
+
           <ul>
-            <li><em>TOOLS USED</em></li>
             <li>CLIP STUDIO PAINT PRO</li>
             <li>Adobe Illustrator</li>
         </ul>
