--- a/editorialproject.html
+++ b/editorialproject.html
@@ -60,11 +60,21 @@
     </nav>
     
     <div class="container">
+      <div class="box">
+        <h3>Publication Layout (academic)</h3>
+      </div>
+    </div>
+
+    <div class="container">
 
         <div class="box" id="projectinfo">
-            <h3>publication layout (academic)</h3>
+            
 
-            <p><em>timeframe:</em> roughly three months</p>
+          <h2>
+            timeframe
+          </h2>
+
+            <p>roughly three months</p>
 
             <p>
                 For the course PUB332: Graphic Design in Transition: Print and Digital Periodicals, I was tasked with creating a pitch for a magazine publication concept, as well as creating a cover design, feature editorial design, web design mockups, and advertisement mockups. This project spanned the entire semester of Spring 2021 and simulated the process of establishing a magazine publication in the field. Placeholder text was used for this project as a mandatory requirement.
@@ -73,8 +83,12 @@
         </div>
 
         <div class="box">
+
+          <h2>
+            tools used
+          </h2>
+
           <ul>
-            <li><em>TOOLS USED</em></li>
             <li>Figma</li>
             <li>Adobe Photoshop</li>
             <li>Adobe InDesign</li>
