--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
           <a href="editorialproject.html">
             <img src="img/thumbnails/PUB332-thumbnail.png">
             <div class="overlay">
-              <div class="linkText">Publication Layout Project (academic)</div>
+              <div class="linkText">Publication Layout Project</div>
             </div>
           </a>
         </div>
@@ -83,7 +83,7 @@
           <a href="vfwcollab.html">
             <img src="img/thumbnails/VFW-thumbnail.png">
             <div class="overlay">
-              <div class="linkText">Vancouver Fashion Week Web Experience Reform (academic)</div>
+              <div class="linkText">Vancouver Fashion Week Web Experience Reform</div>
             </div>  
           </a>
         </div>
@@ -92,7 +92,7 @@
           <a href="vorum.html">
             <img src="img/thumbnails/VORUM-thumbnail.png">
             <div class="overlay">
-              <div class="linkText">Vorum Re-brand (Co-op)</div>
+              <div class="linkText">Vorum Re-brand</div>
             </div>
           </a>
         </div>
@@ -101,7 +101,7 @@
           <a href="studentmentalhealthvis.html">
             <img src="img/thumbnails/IAT355-thumbnail.png">
             <div class="overlay">
-              <div class="linkText">Visual Analytics: Student Mental Health Resources (academic)</div>
+              <div class="linkText">Visual Analytics: Student Mental Health Resources</div>
             </div>
           </a>
         </div>
@@ -111,6 +111,15 @@
             <img src="img/thumbnails/CHS-thumbnail.png">
             <div class="overlay">
               <div class="linkText">Coquitlam Heritage Society Website Redesign</div>
+            </div>
+          </a>
+        </div>
+
+        <div class="link-box">
+          <a href="contrasts.html">
+            <img src="img\thumbnails\contrasts_thumbnail.png">
+            <div class="overlay">
+              <div class="linkText">Contrasts</div>
             </div>
           </a>
         </div>
