--- a/vfwcollab.html
+++ b/vfwcollab.html
@@ -52,14 +52,21 @@
     <a href="javascript:void(0);" class="icon" onclick="navMenu()">
       <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
   </nav>
+  
+  <div class="container">
+    <div class="box">
+      <h3>Vancouver Fashion Week Web Experience Reform (academic)</h3>
+
+    </div>
+  </div>
 
   <div class="container">
 
     <div class="box">
 
-      <h3>Vancouver Fashion Week Web Experience Reform (academic)</h3>
+      <h2>timeframe</h2>
 
-      <p><em>timeframe:</em> three months</p>
+      <p>three months</p>
 
       <p>This was a semester project with a four-man team. We worked with Vancouver Fashion Week to design a solution
         for their dwindling viewership since the migration to a virtual platform. This project was overlooked by SIAT
@@ -76,8 +83,11 @@
 
     <div class="box">
 
+      <h2>
+        tools used
+      </h2>
+
       <ul>
-        <li><em>TOOLS USED</em></li>
         <li>Figma</li>
         <li>Google Forms</li>
         <li>Google Docs</li>
