--- a/vorum.html
+++ b/vorum.html
@@ -56,14 +56,31 @@
   </nav>
 
   <div class="container">
+    <div class="box">
+      <h3>Vorum Re-brand (Co-op)</h3>
+
+    </div>
+  </div>
+
+  <div class="container">
 
     <div class="box">
 
-      <h3>Vorum Re-brand (Co-op)</h3>
+      <h2>
+        role
+      </h2>
 
       <p>
-        <em>role:</em> Graphic Designer <br>
-        <em>timeframe:</em> September 2021 - May 2022
+        Graphic Designer
+        
+      </p>
+
+      <h2>
+        timeframe
+      </h2>
+
+      <p>
+        September 2021 - May 2022
       </p>
 
       <p>
@@ -80,8 +97,11 @@
 
     <div class="box">
 
+      <h2>
+        tools used
+      </h2>
+
       <ul>
-        <li><em>TOOLS USED</em></li>
         <li>Adobe Creative Suite</li>
         <li>Sharepoint</li>
         <li>Figma</li>
