--- a/studentmentalhealthvis.html
+++ b/studentmentalhealthvis.html
@@ -58,11 +58,18 @@
     </nav>
     
     <div class="container">
+      <div class="box">
+        <h3>Visual Analytics: Student Mental Health Resources (academic)</h3>
+      </div>
+    </div>
+
+    <div class="container">
 
         <div class="box">
-            <h3>Visual Analytics: Student Mental Health Resources (academic)</h3>
+            
+          <h2>timeframe</h2>
 
-            <p><em>timeframe:</em> one month</p>
+            <p>one month</p>
 
             <p>
                 This project was overlooked by Professor Lyn Bartram during IAT355: Introduction to Visual Analytics. The main goal of this project was to create a tool that can be used by those looking into mental health resources for post-secondary students; while we are encouraged to include analytical questions for observational purposes, ultimately we were to focus more on the visual design of our data. I worked by myself for this project.
@@ -76,8 +83,12 @@
         </div>
 
         <div class="box">
+
+          <h2>
+            tools used
+          </h2>
+
           <ul>
-            <li><em>TOOLS USED</em></li>
             <li>Observable</li>
             <li>Javascript</li>
             <li>Markdown</li>
