redesigned website; added new project page

--- a/IATSU.html
+++ b/IATSU.html
@@ -48,14 +48,18 @@
 
   <body>
 
-    <nav class="nav" id="myNav">
+    <!-- <nav class="nav" id="myNav">
       <a href="index.html">home</a>
       <a href="projects.html" class="active">projects</a>
       <a href="photography.html">photography</a>
       <a href="aboutme.html">about</a>
       <a href="javascript:void(0);" class="icon" onclick="navMenu()">
         <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
-    </nav>
+    </nav> -->
+
+    <nav>
+      <a href="index.html"><i class="fa">&#xf0a8;</i></a>
+  </nav>
 
     <div class="container">
       <div class="box">
@@ -76,11 +80,11 @@
                 Director of Communication Design
             </p>
 
-            <h2>
+            <!-- <h2>
               timeframe
             </h2>
 
-            <p>May 2019 - May 2020</p>
+            <p>May 2019 - May 2020</p> -->
 
             <p>
                 As Director of Communication Design, I was to design all social media graphics for our student union. This includes our term's branding, event promotion, and student help material.
