--- a/contrasts.html
+++ b/contrasts.html
@@ -40,23 +40,31 @@
         }
     </script>
 
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
 </head>
 
 
 
 <body>
 
-    <nav class="nav" id="myNav">
+    <!-- <nav class="nav" id="myNav">
         <a href="index.html">home</a>
         <a href="projects.html" class="active">projects</a>
         <a href="photography.html">photography</a>
         <a href="aboutme.html">about</a>
         <a href="javascript:void(0);" class="icon" onclick="navMenu()">
             <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
+    </nav> -->
+
+    <nav>
+        <a href="index.html"><i class="fa">&#xf0a8;</i></a>
     </nav>
 
     <div class="container">
+
         <div class="box">
+            
             <h3>Contrasts: Painting a Sentimental Tribute (academic)</h3>
         </div>
     </div>
@@ -72,10 +80,10 @@
                 Director of Videography, Graphic Designer
             </p>
 
-            <h2>
+            <!-- <h2>
                 timeframe
             </h2>
-            <p>three months</p>
+            <p>three months</p> -->
 
             <p>
                 A poetry video + documentary style response combination made in collaboration with Donna Seto, a local
