--- a/coquitlamheritagewebredesign.html
+++ b/coquitlamheritagewebredesign.html
@@ -46,14 +46,17 @@
 
 <body>
 
-  <nav class="nav" id="myNav">
+  <!-- <nav class="nav" id="myNav">
     <a href="index.html">home</a>
     <a href="projects.html" class="active">projects</a>
     <a href="photography.html">photography</a>
     <a href="aboutme.html">about</a>
     <a href="javascript:void(0);" class="icon" onclick="navMenu()">
       <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
-  </nav>
+  </nav> -->
+  <nav>
+    <a href="index.html"><i class="fa">&#xf0a8;</i></a>
+</nav>
 
   <div class="container">
     <div class="box">
@@ -69,9 +72,9 @@
 
       <p>Communications and Community Outreach Assisstant</p>
 
-      <h2>timeframe</h2>
+      <!-- <h2>timeframe</h2>
 
-      <p>June 2023 - August 2023</p>
+      <p>June 2023 - August 2023</p> -->
 
       <p>
         I was to redesign the website for the Coquitlam Heritage Society to make it easier to use for visitors to see
