--- a/editorialproject.html
+++ b/editorialproject.html
@@ -50,14 +50,18 @@
 
   <body>
 
-    <nav class="nav" id="myNav">
+    <!-- <nav class="nav" id="myNav">
       <a href="index.html">home</a>
       <a href="projects.html" class="active">projects</a>
       <a href="photography.html">photography</a>
       <a href="aboutme.html">about</a>
       <a href="javascript:void(0);" class="icon" onclick="navMenu()">
         <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
-    </nav>
+    </nav> -->
+
+    <nav>
+      <a href="index.html"><i class="fa">&#xf0a8;</i></a>
+  </nav>
     
     <div class="container">
       <div class="box">
@@ -70,11 +74,11 @@
         <div class="box" id="projectinfo">
             
 
-          <h2>
+          <!-- <h2>
             timeframe
           </h2>
 
-            <p>roughly three months</p>
+            <p>roughly three months</p> -->
 
             <p>
                 For the course PUB332: Graphic Design in Transition: Print and Digital Periodicals, I was tasked with creating a pitch for a magazine publication concept, as well as creating a cover design, feature editorial design, web design mockups, and advertisement mockups. This project spanned the entire semester of Spring 2021 and simulated the process of establishing a magazine publication in the field. Placeholder text was used for this project as a mandatory requirement.
