--- a/index.html
+++ b/index.html
@@ -1,47 +1,143 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>DLEE</title>
+  <title>DLEE</title>
 
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/font.css">
-
-
-    <link rel="icon"
-          type="image/png"
-          href="">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/font.css">
 
 
-  </head>
+  <link rel="icon" type="image/png" href="">
+
+
+</head>
 
 
 
-  <body>
+<body>
 
-    <div class="container">
+  <div class="container">
 
-        <div class="box">
+    <div class="box">
 
-            <h1>danny</h1>
-            <h2>
-                UX/UI design and photography
-            </h2>
+      <h1>Hello!!</h1>
 
-            <div class="links">
-                <a href="projects.html">projects</a>
-                <a href="photography.html">photography</a>
-                <a href="aboutme.html">about</a>
-            </div>
-        </div>
+      <h1>Welcome to my portfolio :)</h1>
 
-        
+
+
     </div>
-  </body>
+
+
+  </div>
+
+  <div class="gallery">
+
+    <div class="link-box">
+      <a href="illustrations.html">
+        <img src="img/thumbnails/illustration-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Illustrations</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="photography.html">
+        <img src="img/thumbnails/photography-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Photography</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="IATSU.html">
+        <img src="img/thumbnails/IATSU-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Interactive Arts and Technology Student Union (IATSU)</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="editorialproject.html">
+        <img src="img/thumbnails/PUB332-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Publication Layout Project</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="vfwcollab.html">
+        <img src="img/thumbnails/VFW-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Vancouver Fashion Week Web Experience Reform</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="vorum.html">
+        <img src="img/thumbnails/VORUM-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Vorum Re-brand</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="studentmentalhealthvis.html">
+        <img src="img/thumbnails/IAT355-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Visual Analytics: Student Mental Health Resources</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="coquitlamheritagewebredesign.html">
+        <img src="img/thumbnails/CHS-thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Coquitlam Heritage Society Website Redesign</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="link-box">
+      <a href="contrasts.html">
+        <img src="img\thumbnails\contrasts_thumbnail.png">
+        <div class="overlay">
+          <div class="linkText">Contrasts</div>
+        </div>
+      </a>
+    </div>
+
+
+  </div>
+
+  <div class="container">
+    <div class="box">
+      <h3>who is this?</h3>
+
+      <p>
+        about description under construction :p
+      </p>
+
+      <div class="contact">
+                <a href="mailto:dlee1998@hotmail.com">email</a>
+                <a href="https://www.linkedin.com/in/danny-lee-69ba071b9/">linkedin</a>
+                <a href="https://boxonarock.carrd.co">artist profile</a>
+            </div>
+    </div>
+  </div>
+</body>
 
 
 
