--- a/studentmentalhealthvis.html
+++ b/studentmentalhealthvis.html
@@ -48,14 +48,18 @@
 
   <body>
 
-    <nav class="nav" id="myNav">
+    <!-- <nav class="nav" id="myNav">
       <a href="index.html">home</a>
       <a href="projects.html" class="active">projects</a>
       <a href="photography.html">photography</a>
       <a href="aboutme.html">about</a>
       <a href="javascript:void(0);" class="icon" onclick="navMenu()">
         <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
-    </nav>
+    </nav> -->
+
+    <nav>
+      <a href="index.html"><i class="fa">&#xf0a8;</i></a>
+  </nav>
     
     <div class="container">
       <div class="box">
@@ -67,9 +71,9 @@
 
         <div class="box">
             
-          <h2>timeframe</h2>
+          <!-- <h2>timeframe</h2>
 
-            <p>one month</p>
+            <p>one month</p> -->
 
             <p>
                 This project was overlooked by Professor Lyn Bartram during IAT355: Introduction to Visual Analytics. The main goal of this project was to create a tool that can be used by those looking into mental health resources for post-secondary students; while we are encouraged to include analytical questions for observational purposes, ultimately we were to focus more on the visual design of our data. I worked by myself for this project.
