--- a/vfwcollab.html
+++ b/vfwcollab.html
@@ -44,14 +44,18 @@
 
 <body>
 
-  <nav class="nav" id="myNav">
+  <!-- <nav class="nav" id="myNav">
     <a href="index.html">home</a>
     <a href="projects.html" class="active">projects</a>
     <a href="photography.html">photography</a>
     <a href="aboutme.html">about</a>
     <a href="javascript:void(0);" class="icon" onclick="navMenu()">
       <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
-  </nav>
+  </nav> -->
+
+  <nav>
+    <a href="index.html"><i class="fa">&#xf0a8;</i></a>
+</nav>
   
   <div class="container">
     <div class="box">
@@ -64,9 +68,9 @@
 
     <div class="box">
 
-      <h2>timeframe</h2>
+      <!-- <h2>timeframe</h2>
 
-      <p>three months</p>
+      <p>three months</p> -->
 
       <p>This was a semester project with a four-man team. We worked with Vancouver Fashion Week to design a solution
         for their dwindling viewership since the migration to a virtual platform. This project was overlooked by SIAT
