--- a/vorum.html
+++ b/vorum.html
@@ -46,14 +46,18 @@
 
 <body>
 
-  <nav class="nav" id="myNav">
+  <!-- <nav class="nav" id="myNav">
     <a href="index.html">home</a>
     <a href="projects.html" class="active">projects</a>
     <a href="photography.html">photography</a>
     <a href="aboutme.html">about</a>
     <a href="javascript:void(0);" class="icon" onclick="navMenu()">
       <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
-  </nav>
+  </nav> -->
+
+  <nav>
+    <a href="index.html"><i class="fa">&#xf0a8;</i></a>
+</nav>
 
   <div class="container">
     <div class="box">
@@ -75,20 +79,18 @@
         
       </p>
 
-      <h2>
+      <!-- <h2>
         timeframe
       </h2>
 
       <p>
         September 2021 - May 2022
-      </p>
+      </p> -->
 
       <p>
         This was a co-op position where I was to help rebrand the company's image as it transitioned from a family
         company to a more corporate entity. Throughout this position I have created logos, slide templates, colour
-        palettes, marketing materials, and a complete branding guide. I was also in charge of event photography and
-        product photography for this position; because photos may include products not yet released, I will not be
-        including them on my website.
+        palettes, marketing materials, and a complete branding guide.
       </p>
 
 
@@ -119,54 +121,12 @@
     <div class="box">
       <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://embed.figma.com/proto/GOgHpip5aHfrQWFihbUFcO/Vorum-O%26P-Materials?page-id=1%3A2&node-id=1-1392&p=f&viewport=718%2C471%2C0.12&scaling=min-zoom&content-scaling=fixed&embed-host=share" allowfullscreen></iframe>
 
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://embed.figma.com/proto/GOgHpip5aHfrQWFihbUFcO/Vorum-O%26P-Materials?page-id=1%3A10176&node-id=1-10177&p=f&viewport=718%2C471%2C0.05&scaling=contain&content-scaling=fixed&embed-host=share" allowfullscreen></iframe>
     </div>
 
-    <div class="box">
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2829%26t%3DwwGt0UCqDEyQeEc2-1"
-        allowfullscreen></iframe>
-
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2321%26t%3DwwGt0UCqDEyQeEc2-1"
-        allowfullscreen></iframe>
-
-    </div>
 
   </div>
 
-  <div class="container">
-    <div class="box">
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2054%26t%3DwwGt0UCqDEyQeEc2-1"
-        allowfullscreen></iframe>
-
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2551%26t%3DwwGt0UCqDEyQeEc2-1"
-        allowfullscreen></iframe>
-
-    </div>
-
-    <div class="box">
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2330%26t%3DwwGt0UCqDEyQeEc2-1"
-        allowfullscreen></iframe>
-
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2726%26t%3DwwGt0UCqDEyQeEc2-1"
-        allowfullscreen></iframe>
-
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="box">
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2558%26t%3DwwGt0UCqDEyQeEc2-1"
-        allowfullscreen></iframe>
-
-    </div>
-  </div>
+  
 </body>
 
 </html>
