about section updated

--- a/index.html
+++ b/index.html
@@ -126,8 +126,18 @@
     <div class="box">
       <h3>who is this?</h3>
 
+      <p>My photo is currently unavailable at the moment :(</p>
+
+      <h2>
+        Hi! My name is Danny, an illustrator and designer based in Vancouver.
+      </h2>
+
       <p>
-        about description under construction :p
+        Currently, I'm knitting <em>way</em> too many socks and toques so please feel free to contact me if you need any of those!
+      </p>
+
+      <p>
+        I love to express myself through visual media, whether that be through graphic design, illustration, or photography. I want people to <em>feel</em> something when they see my work, so I rely heavily on my background in UX/UI studies to support my creative ventures, and I hope that <em>you</em> can experience that too!
       </p>
 
       <div class="contact">
