updated about section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
         I love to express myself through visual media, whether that be through graphic design, illustration, or photography. I want people to <em>feel</em> something when they see my work, so I rely heavily on my background in UX/UI studies to support my creative ventures, and I hope that <em>you</em> can experience that too!
       </p>
 
+      <p>
+        I've coded my portfolio by myself and I'm currently teaching myself how to create more complex code so some parts of my website may be a little wonky!
+      </p>
+
       <div class="contact">
                 <a href="mailto:dlee1998@hotmail.com">email</a>
                 <a href="https://www.linkedin.com/in/danny-lee-69ba071b9/">linkedin</a>
