--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/font.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
   <link rel="icon" type="image/png" href="">
 
@@ -143,11 +146,15 @@
         I've coded my portfolio by myself and I'm currently teaching myself how to create more complex code so some parts of my website may be a little wonky!
       </p>
 
+      <p>
+        You can see my artist profile <a href="https://boxonarcok.carrd.co">here</a>.
+      </p>
+
       <div class="contact">
-                <a href="mailto:dlee1998@hotmail.com">email</a>
-                <a href="https://www.linkedin.com/in/danny-lee-69ba071b9/">linkedin</a>
-                <a href="https://boxonarock.carrd.co">artist profile</a>
-            </div>
+        <a href="mailto:dlee1998@hotmail.com"><i class="fa fa-envelope-square"></i></a>
+        <a href="https://www.linkedin.com/in/danny-lee-69ba071b9/"><i class="fa fa-linkedin-square"></i></a>
+      </div>
+      
     </div>
   </div>
 </body>
